# virtual_magnetic_sensor

./: .gitignore  .readthedocs.yaml  README.md
Virtual Magnetic Sensor/: hdf5_netgen_viewer.py  main.py  main_nogui.py  pyproject.toml  requirements.txt
Virtual Magnetic Sensor/apps/: main.py
Virtual Magnetic Sensor/cfg/: config.ini
Virtual Magnetic Sensor/docs/source/: conf.py  index.rst  libs.elements.components.rst  libs.elements.magnets.rst  libs.elements.rst  libs.elements.sensors.rst  libs.gui.bars.rst  libs.gui.buttons.rst  libs.gui.frames.components.rst  libs.gui.frames.magnets.rst  libs.gui.frames.rst  libs.gui.frames.sensors.rst  libs.gui.plot.rst  libs.gui.rst  libs.resources.rst  libs.rst  libs.simulation.ngsolve.CSGeometries.rst  libs.simulation.ngsolve.rst  libs.simulation.rst
Virtual Magnetic Sensor/libs/: ConfigHandler.py  DataHandler.py
Virtual Magnetic Sensor/libs/elements/: Component.py  Magnet.py  Sensor.py  SimParams.py
Virtual Magnetic Sensor/libs/gui/: FileDialogs.py  GUIElements.py  GUIHandler.py  ScrolledFrame.py
Virtual Magnetic Sensor/libs/setups/: standard.ini
Virtual Magnetic Sensor/libs/simulation/: MagneticField.py  MagneticFieldFactory.py  SimulationHandler.py
Virtual Magnetic Sensor/resources/save_files/: test_configuration.ini
Virtual Magnetic Sensor/setups/: DictFormatter.py  EvoStandard.ini  EvoStandard.py  series_demo.py  standard.ini
Virtual Magnetic Sensor/setups/EvoGearDamages/: EvoStandardKF.py  EvoStandardPeeling.py  EvoStandardPitting.py  EvoStandardSD.py  (+2 more)
Virtual Magnetic Sensor/test/: test_DataHandler.py
(+108 files in other folders)
